Aligned images correctly
Images are now aligned correctly, credits of the brand images are now added with hyperlink, profile page color fonts have been changed to see clearer.

--- a/css/style.css
+++ b/css/style.css
@@ -828,6 +828,10 @@ input[type="submit"]:hover{
   font-size: 18px;
 }
 
+#clrP{
+    color: white;
+}
+
 /*---Account Firebase Login---*/
 
 .form_box h1{
